# uFS

./: .gitignore  .gitmodules  LICENSE  README.md
cfs/: .gitignore  CMakeLists.txt
cfs/include/: BlkDev.h  BlkDevSpdk.h  BlockBuffer.h  FsLibApp.h  FsLibLease.h  FsLibLeaseShared.h  FsLibMalloc.h  FsLibPageCache.h  FsLibProc.h  FsLibShared.h  FsMsg.h  FsPageCache_Shared.h  FsProc_App.h  FsProc_FileMng.h  FsProc_Fs.h  FsProc_FsImpl.h  FsProc_FsInternal.h  FsProc_FsReq.h  FsProc_JSuper.h  FsProc_Journal.h  FsProc_KnowParaLoadMng.h  FsProc_Lease.h  FsProc_LoadMng.h  FsProc_LoadMngCommon.h  FsProc_Messenger.h  FsProc_PageCache.h  FsProc_Permission.h  FsProc_SplitPolicy.h  FsProc_TLS.h  FsProc_UnixSock.h  FsProc_WorkerComm.h  FsProc_WorkerMock.h  FsProc_WorkerStats.h  FsProc__JournalDisabled.h  FsProc__JournalEnabled.h  FsProc_util.h  FsReq_SyncBatchCtx.h  cfs_feature_macros.h  fs_defs.h  fsapi.h  (+6 more)
cfs/include/perfutil/: Cycles.h  Histogram.h  Initialize.h  Stats.h  Util.h
cfs/include/radixtree/: README  radix_tree.h  radix_tree_it.h  radix_tree_node.h
cfs/include/shmipc/: shmipc.h
cfs/include/stats/: stats.h  timer.h
cfs/include/util/: util_buf_ring.h  util_common.h  util_param.h  util_ring_c11_mem.h
cfs/lib/config4cpp/: .gitignore  CHANGES.txt  LICENCE.txt  Makefile  Makefile.inc  Makefile.win  Makefile.win.inc  README.txt  VERSION.txt  count_lines_of_code.sh
cfs/lib/config4cpp/demos/: Makefile  Makefile.win
cfs/lib/config4cpp/lib/: README.txt
cfs/lib/config4cpp/src/: Config2Cpp.cpp  Config2Cpp.h  ConfigItem.cpp  ConfigItem.h  ConfigLex.cpp  ConfigLex.h  ConfigParser.cpp  ConfigParser.h  ConfigScope.cpp  ConfigScope.h  ConfigScopeEntry.cpp  ConfigScopeEntry.h  Configuration.cpp  ConfigurationException.cpp  ConfigurationImpl.cpp  ConfigurationImpl.h  DefaultSecurity.cfg  DefaultSecurity.cpp  DefaultSecurity.h  DefaultSecurityConfiguration.cpp  DefaultSecurityConfiguration.h  LexBase.cpp  LexBase.h  LexToken.cpp  LexToken.h  MBChar.cpp  MBChar.h  Makefile  Makefile.win  README.txt  SchemaLex.cpp  SchemaLex.h  SchemaParser.cpp  SchemaParser.h  SchemaRuleInfo.h  SchemaType.cpp  SchemaTypeBoolean.cpp  SchemaTypeBoolean.h  SchemaTypeDummy.h  SchemaTypeDurationMicroseconds.cpp  (+51 more)
cfs/lib/config4cpp/tests/: Makefile  (+1 more)
cfs/lib/spdk/: .gitignore  Makefile.sharedlib  test.c
cfs/lib/tbb/: .gitignore
cfs/src/: BlkDevSpdk.cc  BlockBuffer.cc  FsLib.cc  FsLibLeaseShared.cc  FsLibMalloc.cc  FsLibPageCache.cc  FsLibShared.cc  FsPageCache.cc  FsProc.cc  FsProc_FileMng.cc  FsProc_FileMngOps.cc  FsProc_FsImpl.cc  FsProc_FsMain.cc  FsProc_Journal.cc  FsProc_JournalBasic.cc  FsProc_KP_DS.cc  FsProc_KnowParaLoadMng.cc  FsProc_Lease.cc  FsProc_LoadAllowance.cc  FsProc_LoadMng.cc  FsProc_Messenger.cc  FsProc_PageCache.cc  FsProc_Permission.cc  FsProc_SplitPolicy.cc  FsProc_TLS.cc  FsProc_UnixSock.cc  FsProc_Worker.cc  FsProc_WorkerComm.cc  FsProc_WorkerMock.cc  FsProc_WorkerStats.cc  rbtree.cc  shmipc.c  util.cc
cfs/src/perfutil/: Cycles.cc  Histogram.cc  Stats.cc  Util.cc
cfs/src/stats/: stats.cc  timer.cc
cfs/src/util/: util_buf_ring.c
cfs/test/: .gitignore  CMakeLists.txt  README.md  run_regression_test.sh
cfs/test/benchmark/: posix_wrapper.cc  simpleBench.cc
cfs/test/client/: CLI-README.md  CMakeLists.txt  fstest_large_rw.py  testCfsVersusVfs.py  testClientCPC_mt.cc  testClient_App.cc  testClient_CLI.cc  testClient_common.h  testDumpToVfs.cc
cfs/test/fsck/: CMakeLists.txt  fsck.cc
cfs/test/fsproc/: CMakeLists.txt  README  fsFuncTest1.cc  fsFuncTestCommon.h  fsOfflineCheckpointer.cc  fsProcDumpMetadata.cc  fsRW.cc  fsTest_FsImpl_MemBufLayout.cc  fsTest_FsInternal.cc  fsTest_FsInternal_DiskDataFmt.cc  fsTest_FsLibMalloc.cc  fsTest_FsLibMultiThreads.cc  fsTest_FsReq_pathCache.cc  fsTest_KPLm.cc  fsTest_KP_DS.cc  fsTest_Util2.cc  fsTest_fsprocUtil.cc  fsTest_rbtree.cc  fsUtil_utest.cc  testBlkDevSpdk.cc  testBlockBuffer_MT.cc  testBlockBuffer_utest.cc  testBlockBuffer_utest2.cc  testOpRingBuffer_MT.cc  testUtilRingBuf.cc
cfs/test/gtestExample/: factorial.cc  factorial.h  factorial_utest.cc
cfs/test/perfutil/: CMakeLists.txt  StatsTest.cc
cfs/test/sample_config/: fsp.conf  spdk_dev.conf
cfs/test/shmipc/: CMakeLists.txt  README.md  check_ipc_messages.cc  client.c  log.h  myargs.h  run_sync.sh  server.c  test_shmipc_async.c  timer_rdtsc.h
cfs/test/urcu_usage/: CMakeLists.txt  testLoadAllowance.cc
cfs/tools/: build_init.sh  build_urcu.sh  bumble_setup_after_reboot.sh  clean-cmake-cfs.sh  compare_json.py  diff_bitmaps.py  folly_install.sh  init_dev4ext.sh  oats_setup_after_reboot.sh
cfs/tools/load_stat_code_gen/: .gitignore  README.md  gen_cpp_py_for_cstruct.py  struct.hh
cfs_bench/: .gitignore  CMakeLists.txt
cfs_bench/bench/: cfs_bench.cc  coordinator.cc
cfs_bench/exprs/: .gitignore  bench_journal.py  bench_mt_listdir.py  bench_mt_mkdir.py  bench_mt_openclose.py  bench_mt_randoverwrite_noflush.py  bench_mt_randread.py  bench_mt_randwrite.py  bench_mt_rename.py  bench_mt_seqread.py  bench_mt_stat.py  bench_mt_statall.py  bench_mt_unlink.py  bench_mt_write_noflush.py  bench_mt_write_sync.py  cfs_expr_read.py  cfs_expr_write.py  cfs_test_common.py  cfsmt_expr_meta.py  cfsmt_expr_read.py  cfsmt_expr_write.py  fsp_analyze_lb.py  fsp_microbench_suite.py  init_mt_bench_file.py  journal_runner.py  lm_prep_files.py  lm_test_load.py
cfs_bench/exprs/artifact_eval/: README.md  artifact_eval.sh  cmpl-filebench.sh  cmpl-leveldb.sh  cmpl-loadmng.sh  cmpl-microbench.sh  common.sh  plot-filebench.sh  plot-leveldb.sh  plot-loadmng.sh  plot-microbench.sh  run-filebench.sh  run-leveldb.sh  run-loadmng.sh  run-microbench.sh
cfs_bench/exprs/leveldb_plot/: parse_log.py
cfs_bench/exprs/microbench_plot/: parse_log.py  plot_ufs_ext4_cmp.py
cfs_bench/helpers/memenv/: memenv.cc  memenv.h  memenv_test.cc
cfs_bench/include/benchutils/: coordinator.h
cfs_bench/include/leveldb/: env.h  export.h  slice.h  status.h
cfs_bench/port/: port.h  port_stdcxx.h  thread_annotations.h
cfs_bench/util/: env_posix.cc  histogram.cc  histogram.h  mutexlock.h  random.h  testutil.cc  testutil.h
(+123 files in other folders)
